--- a/assets/style/setup/vars.css
+++ b/assets/style/setup/vars.css
@@ -1,4 +1,18 @@
 :root {
+  --clr1: #7f99ff;
+  --clr2: #CFDED3;
+
+  --clr1bg: #6C9CE6;
+  --clr1bg-light: #98B3E6;
+  --clr2bg: #a3e7b3;
+  --clr2bg-light: #87AB90;
+
+  --gray1: rgb(240, 240, 240);
+  --gray2: rgb(155, 155, 155);
+  --gray3: rgb(44, 44, 44);
+}
+
+/* :root {
   --clr1: rgb(96, 107, 91);
   --clr2: rgb(120, 99, 110);
 
@@ -10,5 +24,4 @@
   --gray1: rgb(240, 240, 240);
   --gray2: rgb(155, 155, 155);
   --gray3: rgb(44, 44, 44);
-
-} 
+} */
